--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
 *.pyc
 *.out
 
+#Eclipse Ignores
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+/src/main/resources/rebel.xml
+# External tool builders
+.externalToolBuilders/
